# wgpu-crabgrab

./: .gitignore  Cargo.toml  apple_lib_build.sh
macOS/wgpu-in-macos/: AppDelegate.swift  Bridging-Header.h  MetalView.swift  ViewController.swift  libwgpu_in_app.h
macOS/wgpu-in-macos.xcodeproj/: project.pbxproj
macOS/wgpu-in-macos.xcodeproj/project.xcworkspace/xcuserdata/lijinlei.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/wgpu-in-macos.xcodeproj/xcuserdata/lijinlei.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/wgpu-in-macos/Base.lproj/: Main.storyboard
src/: capture.rs  lib.rs  wgpu_canvas.rs
src/ffi/: android.rs  ios.rs
src/utils/: mod.rs
src/utils/node/: bufferless_fullscreen_node.rs  mod.rs
wgsl_shader/: bufferless.wgsl
